--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     //compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile files('/Users/gavin/Development/Android/DiningRoomOrder/.idea/libraries/android-async-http-1.4.9.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
